cluster/home/homeassistant/001-namespace.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    name: homeassistant
